package iotflow.comportamento;

public interface Acao {

   String toCpp();
}
