package iotflow.hardware;

public enum TipoValor {
   BOOLEANO,
   INTEIRO,
   DECIMAL
}
